--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gc-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cj179john.github.io/gc-app",
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
